Made Collections.singleton use List.of too